# release_parser_bot

./: .gitignore  Dockerfile  bot_data.pickle  consts.py  docker-compose.yml  get_links.py  main.py  pyproject.toml  requirements.txt  utilities.py
